CS_PROD_20150209_01/Metadata/unpackaged/objects/SBQQ__Quote__c.object
<CustomObject>
    <fields>
        <fullName>Include_Cover_Page__c</fullName>
        <formula>IF (ISPICKVAL(SBQQ__Opportunity__r.Type,&quot;New&quot;), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include - Cover Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_MSA_Paragrah__c</fullName>
        <formula>NOT( Include_MSA__c )</formula>
        <label>Include - MSA Paragrah</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_MSA__c</fullName>
        <formula>ISNULL( SBQQ__Opportunity__r.Account.MSA_Signed_On__c ) || ISBLANK( SBQQ__Opportunity__r.Account.MSA_Signed_On__c )</formula>
        <label>Include - MSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Monthly_Copyright_Fees__c</fullName>
        <formula>/* Per Amanda on 12/17, do not display copyright fee in sub-total, but in detailed lines */
False

/*
AND(
 Include_Monthly__c,
 Monthly_Net_Copyright_Fees_Rollup__c &gt; 0
)
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include - Monthly - Copyright Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Monthly_Discount__c</fullName>
        <formula>AND(
 Include_Monthly__c,
 Monthly_Discount__c &gt; 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include - Monthly - Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Monthly__c</fullName>
        <formula>ISPICKVAL( Monitoring_Billing__c ,&quot;Monthly&quot;)
&amp;&amp;
Monthly_List_Total__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include - Monthly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Signature__c</fullName>
        <description>When Quote is Approved, it should display the Signature Section</description>
        <formula>ISPICKVAL(SBQQ__Status__c,&quot;Approved&quot;)</formula>
        <label>Include Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Upsell_Cover_Page__c</fullName>
        <formula>IF (ISPICKVAL(SBQQ__Opportunity__r.Type,&quot;Upsell&quot;), True, False)</formula>
        <label>Include Upsell Cover Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Installment_Amount__c</fullName>
        <formula>IF(ISPICKVAL(Payment_Plan__c,&quot;&quot;), SBQQ__NetAmount__c, 
IF(ISPICKVAL(Payment_Plan__c, &quot;Monthly&quot;),  SBQQ__NetAmount__c/SBQQ__SubscriptionTerm__c,
IF(ISPICKVAL(Payment_Plan__c, &quot;3 Equal Payments&quot;),  SBQQ__NetAmount__c/3,
IF(ISPICKVAL(Payment_Plan__c, &quot;Quarterly&quot;),  SBQQ__NetAmount__c/4,
IF(ISPICKVAL(Payment_Plan__c, &quot;6 Equal Payments&quot;),  SBQQ__NetAmount__c/6,
IF(ISPICKVAL(Payment_Plan__c, &quot;Custom&quot;),  null,
IF(ISPICKVAL(Payment_Plan__c, &quot;Biannual&quot;),  SBQQ__NetAmount__c/2, SBQQ__NetAmount__c/ROUND((SBQQ__SubscriptionTerm__c/12),0)
)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Integration_Failure__c</fullName>
        <label>Integration Failure</label>
        <picklist>
            <picklistValues>
                <fullName>No Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Shell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Line</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Contact_Email__c</fullName>
        <formula>SBQQ__Opportunity__r.Invoice_Contact_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Contact_Name__c</fullName>
        <description>Created by LM on</description>
        <formula>SBQQ__Opportunity__r.Invoice_Contact_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Contact_Phone__c</fullName>
        <formula>SBQQ__Opportunity__r.Invoice_Contact_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Annual_Billing__c</fullName>
        <formula>IF( ( Is_Only_Monitoring_or_Broadcasting_Srv__c = TRUE &amp;&amp; TEXT( Monitoring_Billing__c ) = &quot;Annual&quot; )
  ||( Is_Monitoring_or_Broadcasting_Services__c &gt; 0 &amp;&amp; TEXT( Monitoring_Billing__c ) = &quot;Annual&quot; )
  ||( Is_Only_Plan_Services__c = TRUE )
  ||( Is_Mixed_Billing__c = False &amp;&amp; Is_Monthly_Billing_Via_Credit_Card__c = 0 &amp;&amp; Is_Monthly_Billing_via_Invoice__c = 0 ),
  True,
  False
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Annual Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Annual_Credit_Card_Custom_Plan__c</fullName>
        <formula>IF( Is_Annual_Billing__c = True &amp;&amp; TEXT( Payment_Type__c ) = &quot;Credit Card&quot;  &amp;&amp; TEXT( Payment_Plan__c ) = &quot;Custom&quot;,
  1,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Annual Credit Card Custom Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Annual_Credit_Card_no_Plan__c</fullName>
        <formula>IF( Is_Annual_Billing__c = True &amp;&amp; TEXT( Payment_Type__c ) = &quot;Credit Card&quot; &amp;&amp; TEXT( Payment_Plan__c ) = NULL,
  1,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Annual Credit Card no Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Annual_Credit_Card_with_Plan__c</fullName>
        <formula>IF( Is_Annual_Billing__c = True 
  &amp;&amp; TEXT( Payment_Type__c ) = &quot;Credit Card&quot; 
  &amp;&amp; NOT( TEXT( Payment_Plan__c ) = NULL )  
  &amp;&amp; NOT( TEXT( Payment_Plan__c ) = &quot;Custom&quot;),
  1,
  0
)</formula>
        <label>Is Annual Credit Card with Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Annual_Invoice_Custom_Plan__c</fullName>
        <formula>IF( Is_Annual_Billing__c = True &amp;&amp; TEXT( Payment_Type__c ) = &quot;Invoice&quot;  &amp;&amp; TEXT( Payment_Plan__c ) = &quot;Custom&quot;,
  1,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Annual Invoice Custom Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Annual_Invoice_no_Plan__c</fullName>
        <formula>IF( Is_Annual_Billing__c = True &amp;&amp; TEXT( Payment_Type__c ) = &quot;Invoice&quot; &amp;&amp; TEXT( Payment_Plan__c ) = NULL,
  1,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Annual Invoice no Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Annual_Invoice_with_Plan__c</fullName>
        <formula>IF( Is_Annual_Billing__c = True 
  &amp;&amp; TEXT( Payment_Type__c ) = &quot;Invoice&quot; 
  &amp;&amp; NOT( TEXT( Payment_Plan__c ) = NULL )
  &amp;&amp; NOT( TEXT( Payment_Plan__c ) = &quot;Custom&quot; ),
  1,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Annual Invoice with Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Global_Analysis__c</fullName>
        <label>Is Global Analysis</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.ProductFamily2__c</field>
            <operation>equals</operation>
            <value>Global Analysis Services</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_Manager_VP__c</fullName>
        <formula>IF ( SBQQ__SalesRep__r.Is_Manager_VP__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Manager VP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Mixed_Billing__c</fullName>
        <formula>IF( Is_Monitoring_or_Broadcasting_Services__c &gt; 0 &amp;&amp;  Is_Not_Monitoring_or_Broadcasting_Srv__c &gt; 0 &amp;&amp; TEXT( Monitoring_Billing__c ) = &quot;Monthly&quot;,
  True,
  False
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Mixed Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Mixed_Credit_Card_Custom_Plan__c</fullName>
        <formula>IF( Is_Mixed_Billing__c = True &amp;&amp; TEXT( Payment_Type__c ) = &quot;Credit Card&quot; &amp;&amp; TEXT( Payment_Plan__c ) = &quot;Custom&quot;,
  1,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Mixed Credit Card Custom Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Mixed_Credit_Card_no_Plan__c</fullName>
        <formula>IF( Is_Mixed_Billing__c = True &amp;&amp; TEXT( Payment_Type__c ) = &quot;Credit Card&quot; &amp;&amp; TEXT( Payment_Plan__c ) = NULL,
  1,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Mixed Credit Card no Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Mixed_Credit_Card_with_Plan__c</fullName>
        <formula>IF( Is_Mixed_Billing__c = True 
  &amp;&amp; TEXT( Payment_Type__c ) = &quot;Credit Card&quot; 
  &amp;&amp; NOT( TEXT( Payment_Plan__c ) = NULL )
  &amp;&amp; NOT( TEXT( Payment_Plan__c ) = &quot;Custom&quot; ),
  1,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Mixed Credit Card with Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Mixed_Invoice_Custom_Plan__c</fullName>
        <formula>IF( Is_Mixed_Billing__c = True &amp;&amp; TEXT( Payment_Type__c ) = &quot;Invoice&quot; &amp;&amp; TEXT( Payment_Plan__c ) = &quot;Custom&quot;,
  1,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Mixed Invoice Custom Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Mixed_Invoice_no_Plan__c</fullName>
        <formula>IF( Is_Mixed_Billing__c = True &amp;&amp; TEXT( Payment_Type__c ) = &quot;Invoice&quot; &amp;&amp; TEXT( Payment_Plan__c ) = NULL,
  1,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Mixed Invoice no Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Mixed_Invoice_with_Plan__c</fullName>
        <formula>IF( Is_Mixed_Billing__c = True 
  &amp;&amp; TEXT( Payment_Type__c ) = &quot;Invoice&quot; 
  &amp;&amp; NOT( TEXT( Payment_Plan__c ) = NULL )
  &amp;&amp; NOT( TEXT( Payment_Plan__c ) = &quot;Custom&quot; ),
  1,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Mixed Invoice with Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Monitoring_or_Broadcasting_Services__c</fullName>
        <label>Is Monitoring or Broadcasting Services</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Is_Monitoring_or_Broadcasting_Services__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_Monthly_Billing_Via_Credit_Card__c</fullName>
        <formula>IF( (Is_Only_Monitoring_or_Broadcasting_Srv__c = True) 
  &amp;&amp; (TEXT( Payment_Type__c) = &quot;Credit Card&quot;) 
  &amp;&amp; (TEXT( Monitoring_Billing__c ) = &quot;Monthly&quot;),
  1,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Monthly Billing Via Credit Card</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Monthly_Billing_via_Invoice__c</fullName>
        <formula>IF( (Is_Only_Monitoring_or_Broadcasting_Srv__c = True)
  &amp;&amp; (TEXT( Payment_Type__c) = &quot;Invoice&quot;)
  &amp;&amp; (TEXT( Monitoring_Billing__c ) = &quot;Monthly&quot;),
  1,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Monthly Billing via Invoice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Not_Monitoring_or_Broadcasting_Srv__c</fullName>
        <label>Is Not Monitoring or Broadcasting Srv</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Is_Monitoring_or_Broadcasting_Services__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_Not_Plan_Services__c</fullName>
        <label>Is Not Plan Services</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Is_Plan_Services__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_Only_Monitoring_or_Broadcasting_Srv__c</fullName>
        <formula>(Is_Monitoring_or_Broadcasting_Services__c &gt; 0) &amp;&amp; ( Is_Not_Monitoring_or_Broadcasting_Srv__c = 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Only Monitoring or Broadcasting Srv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Only_Plan_Services__c</fullName>
        <formula>(Is_Plan_Services__c &gt; 0) &amp;&amp; (Is_Not_Plan_Services__c = 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Only Plan Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Plan_Services__c</fullName>
        <label>Is Plan Services</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Is_Plan_Services__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_Product_Discounted_Below_Cost__c</fullName>
        <label>Is Product Discounted Below Cost</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__GrossProfitAmount__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_Renewal__c</fullName>
        <formula>IF(ISPICKVAL( SBQQ__Opportunity__r.Type , &quot;Renewal&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Workflow_International_Print__c</fullName>
        <label>Is Workflow International Print</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Workflow_International_Print__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_Workflow_Managed_Services__c</fullName>
        <label>Is Workflow Managed Services</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Workflow_Managed_Services__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Years_Spend__c</fullName>
        <formula>SBQQ__Opportunity__r.Last_Year_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Years Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Years_Values_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Years Values Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Review?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monitoring_Billing__c</fullName>
        <description>Created by LM on 10/15/2013 for Phase 2 rollout (replaces Package Deal)</description>
        <label>Monitoring Billing</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Discount__c</fullName>
        <formula>(Monthly_List_Total__c + Monthly_Net_Copyright_Fees__c)  -  Monthly_Net_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly - Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_List_Total_Rollup__c</fullName>
        <label>Monthly - List Total Rollup</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__ListTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Monthly_Subscription_2__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Monthly_List_Total__c</fullName>
        <formula>(
 Monthly_List_Total_Rollup__c +
 ABS( Monthly_Total_Negative_Discount_Rollup__c ) -
 Monthly_Net_Copyright_Fees_Rollup__c
) / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly - List Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Net_Copyright_Fees_Rollup__c</fullName>
        <label>Monthly - Net Copyright Fees Rollup</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.ProductCode2__c</field>
            <operation>equals</operation>
            <value>MONCOPYRIGHTCAAC,MONCPCOPYRIGHT</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Monthly_Subscription_2__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Monthly_Net_Copyright_Fees__c</fullName>
        <formula>Monthly_Net_Copyright_Fees_Rollup__c / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly - Net Copyright Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Net_Total_Rollup__c</fullName>
        <label>Monthly - Net Total Rollup</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Monthly_Subscription_2__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Monthly_Net_Total__c</fullName>
        <formula>Monthly_Net_Total_Rollup__c / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly - Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Total_Negative_Discount_Rollup__c</fullName>
        <label>Monthly - Total Negative Discount Rollup</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__TotalDiscountAmount__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Monthly_Subscription_2__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__TotalDiscountAmount__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Needs_Approval_from_Next_Level_Manager__c</fullName>
        <formula>IF ( Require_Discount_Approval_Sales_VP__c = &quot;No&quot; , &quot;No&quot;, IF ( Is_Manager_VP__c = &quot;No&quot;, &quot;Yes&quot;, &quot;No&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Needs Approval from Next Level Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Amount_Sans_Copyright__c</fullName>
        <formula>SBQQ__NetAmount__c -  Annual_Net_Copyright_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount Sans Copyright</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Null__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Null</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Stage__c</fullName>
        <formula>TEXT(SBQQ__Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Account_Billing_Address__c</fullName>
        <formula>SBQQ__Account__r.BillingStreet &amp; &quot;, &quot; &amp; SBQQ__Account__r.BillingCity   &amp; &quot;, &quot; &amp; SBQQ__Account__r.BillingState &amp; &quot; &quot; &amp; SBQQ__Account__r.BillingPostalCode &amp; &quot; &quot; &amp; SBQQ__Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity_Account_Billing_Addres</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Account_Name__c</fullName>
        <formula>SBQQ__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity_Account_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Contact_Name_Attention__c</fullName>
        <formula>SBQQ__Opportunity__r.Contact_Name_Attention__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity_Contact_Name_Attention</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Invoice_CC_Recipients__c</fullName>
        <formula>SBQQ__Opportunity__r.Invoice_CC_Recipients__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Invoice CC Recipients</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Invoice_Contact_Email__c</fullName>
        <formula>SBQQ__Opportunity__r.Invoice_Contact_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Invoice Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Invoice_Contact_Name__c</fullName>
        <formula>SBQQ__Opportunity__r.Invoice_Contact_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Invoice Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Invoice_Contact_Phone__c</fullName>
        <formula>SBQQ__Opportunity__r.Invoice_Contact_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Invoice Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>SBQQ__Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_User_Address__c</fullName>
        <formula>SBQQ__Opportunity__r.Owner.Street  &amp; &quot; &quot; &amp;  SBQQ__Opportunity__r.Owner.City  &amp; &quot; &quot; &amp;  SBQQ__Opportunity__r.Owner.State &amp; &quot; &quot; &amp; SBQQ__Opportunity__r.Owner.PostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity_Owner_User_Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_User_Email__c</fullName>
        <formula>SBQQ__Opportunity__r.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity_Owner_User_Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_User_Name__c</fullName>
        <formula>SBQQ__Opportunity__r.Owner.FirstName  &amp; &quot; &quot; &amp;  SBQQ__Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity_Owner_User_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_User_Phone__c</fullName>
        <formula>SBQQ__Opportunity__r.Owner.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity_Owner_User_Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_User_Title__c</fullName>
        <formula>SBQQ__Opportunity__r.Owner.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity_Owner_User_Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Renewal_Due_Date__c</fullName>
        <formula>SBQQ__Opportunity__r.Renewal_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity_Renewal_Due_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Ship_To_Address__c</fullName>
        <formula>SBQQ__Opportunity__r.Shipping_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity_Ship_To_Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Shipping_Address_Line_1__c</fullName>
        <formula>SBQQ__Opportunity__r.Shipping_Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Shipping Address Line 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Shipping_Address_Line_2__c</fullName>
        <formula>SBQQ__Opportunity__r.Shipping_City__c &amp; &quot; &quot; &amp; SBQQ__Opportunity__r.Shipping_State__c &amp; &quot;, &quot; &amp; SBQQ__Opportunity__r.Shipping_Zip__c &amp; &quot; &quot; &amp; SBQQ__Opportunity__r.Shipping_Country__c</formula>
        <label>Opportunity Shipping Address Line 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Shipping_Address__c</fullName>
        <formula>Opportunity_Shipping_Address_Line_1__c &amp; &quot; &quot; &amp; Opportunity_Shipping_Address_Line_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity_Shipping_Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Shipping_Country__c</fullName>
        <formula>SBQQ__Opportunity__r.Shipping_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Shipping Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_Clause__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 3/14/2014 for Phase2</description>
        <label>Out Clause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Output_Quote_Status_Message__c</fullName>
        <formula>IF( TEXT( SBQQ__Status__c ) = &quot;Approved&quot;,
  NULL ,
  &quot;Budgetary Quote&quot;
)</formula>
        <label>Output Quote Status Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DS test</description>
        <label>PO Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P_O_Number__c</fullName>
        <description>Created by LM on 1/14/2014 for Phase2</description>
        <label>P.O. Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Deal_Boolean__c</fullName>
        <formula>NOT(ISPICKVAL( Monitoring_Billing__c ,&quot;Monthly&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Package Deal Boolean</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>